# KIGTTS

./: CLAUDE.md  NOTICE  README.md  THIRD_PARTY_LICENSES.md  _adb.txt  _build_err.txt
Electron_Trainer/: README.md  package.json
android-app/: README.md
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/cpp/: patch_espeak.cmake
android-app/app/src/main/res/drawable/: logo_black.xml  logo_white.xml  splash_logo_day.xml  splash_screen.xml
android-app/app/src/main/res/drawable-night/: splash_logo_night.xml  splash_screen.xml
android-app/app/src/main/res/values/: colors.xml  themes.xml
android-app/app/src/main/res/values-night/: themes.xml
flutter_app/: README.md  pubspec.yaml
flutter_app/android/app/: build.gradle.kts
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/android/app/src/main/cpp/: CMakeLists.txt  aec3_jni.cpp  espeak_jni.cpp  patch_aec3.cmake
flutter_app/lib/: app.dart  injection.dart  main.dart
flutter_app/lib/core/constants/: channel_names.dart  prefs_keys.dart
flutter_app/lib/core/error/: failures.dart
flutter_app/lib/core/router/: app_router.dart
flutter_app/lib/core/theme/: app_colors.dart  app_dimensions.dart  app_theme.dart
flutter_app/lib/core/utils/: snap_utils.dart
flutter_app/lib/data/datasources/: keepalive_channel.dart  model_channel.dart  overlay_channel.dart  realtime_channel.dart  settings_local.dart
flutter_app/lib/data/dto/: realtime_event_dto.dart  settings_dto.dart  voice_pack_dto.dart
flutter_app/lib/data/repositories/: keepalive_repository_impl.dart  model_repository_impl.dart  overlay_repository_impl.dart  realtime_repository_impl.dart  settings_repository_impl.dart
flutter_app/lib/domain/entities/: app_settings.dart  app_settings.freezed.dart  app_settings.g.dart  asr_model_info.dart  asr_model_info.freezed.dart  asr_model_info.g.dart  draw_stroke.dart  draw_stroke.freezed.dart  quick_card.dart  quick_card.freezed.dart  quick_card.g.dart  quick_subtitle.dart  quick_subtitle.freezed.dart  quick_subtitle.g.dart  realtime_event.dart  realtime_event.freezed.dart  recognized_item.dart  recognized_item.freezed.dart  speaker_profile.dart  speaker_profile.freezed.dart  speaker_profile.g.dart  voice_pack_info.dart  voice_pack_info.freezed.dart  voice_pack_info.g.dart
flutter_app/lib/domain/repositories/: keepalive_repository.dart  model_repository.dart  overlay_repository.dart  realtime_repository.dart  settings_repository.dart
flutter_app/lib/presentation/cubits/drawing/: drawing_cubit.dart  drawing_state.dart  drawing_state.freezed.dart
flutter_app/lib/presentation/cubits/model_manager/: model_manager_cubit.dart  model_manager_state.dart  model_manager_state.freezed.dart
flutter_app/lib/presentation/cubits/overlay/: overlay_cubit.dart  overlay_state.dart  overlay_state.freezed.dart
flutter_app/lib/presentation/cubits/quick_card/: quick_card_cubit.dart  quick_card_state.dart  quick_card_state.freezed.dart
flutter_app/lib/presentation/cubits/quick_subtitle/: quick_subtitle_cubit.dart  quick_subtitle_state.dart  quick_subtitle_state.freezed.dart
flutter_app/lib/presentation/cubits/realtime/: realtime_cubit.dart  realtime_state.dart  realtime_state.freezed.dart
flutter_app/lib/presentation/cubits/settings/: settings_cubit.dart  settings_state.dart  settings_state.freezed.dart
flutter_app/lib/presentation/cubits/speaker_verify/: speaker_verify_cubit.dart  speaker_verify_state.dart  speaker_verify_state.freezed.dart
flutter_app/lib/presentation/pages/drawing/: drawing_page.dart
flutter_app/lib/presentation/pages/log/: log_viewer_page.dart
flutter_app/lib/presentation/pages/model_manager/: model_manager_page.dart
flutter_app/lib/presentation/pages/model_manager/widgets/: asr_model_section.dart  voice_pack_card.dart  voice_pack_detail_sheet.dart
flutter_app/lib/presentation/pages/overlay/: overlay_control_page.dart
flutter_app/lib/presentation/pages/quick_card/: quick_card_page.dart
flutter_app/lib/presentation/pages/quick_subtitle/: quick_subtitle_page.dart
flutter_app/lib/presentation/pages/realtime/: realtime_page.dart
flutter_app/lib/presentation/pages/realtime/widgets/: recognized_list.dart  running_controls.dart  status_bar.dart
flutter_app/lib/presentation/pages/settings/: settings_page.dart
flutter_app/lib/presentation/widgets/: app_scaffold.dart  icon_symbol.dart  running_strip.dart  section_card.dart  side_drawer.dart  top_bar.dart
flutter_app/test/: widget_test.dart
flutter_app/windows/: CMakeLists.txt
flutter_app/windows/runner/: Runner.rc  main.cpp
pc_trainer/: README.md  build_exe.ps1
(+39 files in other folders)
